# aimediarenamer

./: .gitignore  README.md  pyproject.toml
src/: config.py
src/tools/tmdb/: __init__.py  main.py  models.py
tests/: conftest.py
tests/unit/: test_tmdb.py
