[project]
name = "aimediarenamer"
version = "0.1.0"
description = "aimediarenamer etc etc"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.70.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "respx>=0.23.1",
    "hypothesis>=6.151.11"
]
